# VRSpin

./: .gitignore  LICENSE  README.md  demo_look_and_interact.py  index.html  package.json  pyproject.toml  requirements.txt
.github/instructions/: 01-summary.instructions.md  02-spinstep-capability-mapping.instructions.md  03-architecture-overview.instructions.md  04-quaternion-utilities.instructions.md  05-proposed-new-module.instructions.md  06-example-usage.instructions.md  07-public-api-design.instructions.md  08-unity-unreal-integration.instructions.md  09-phase-delivery-plan.instructions.md  webgl.instructions.md
benchmark/: vr_attention_benchmark.py
docs/: 09-api-reference.md  10-vr-demo.md  capability-report.md
examples/: plaza_visualization.py  plaza_visualization_README.md  vr_bridge_server.py  vr_bridge_server_README.md
examples/unity/: SpinStepClient.cs  VRSpinNative.cs
examples/unreal/: VRSpinNative.h
shaders/: basic.frag.glsl
src/app/: main.js
src/audio/: spatialAudio.js
src/core/: GLContext.js  Renderer.js  node.js  node.test.js  perception.js  perception.test.js  spinstep.js  spinstep.test.js
src/geometry/: BoxGeometry.js  Geometry.js  TriangleGeometry.js
tests/: test_architecture.py  test_multihead.py  test_native_bridge.py  test_npc_agent.py  test_plaza_visualization.py  test_scene.py  test_vrspin.py
vrspin/: __init__.py  architecture.yaml  attention_manager.py  bridge.py  cone.py  entities.py  math_utils.py  models.py  multi_head.py  multihead.py  native_bridge.py  npc.py  npc_agent.py  plaza.py  scene.py  user.py  utils.py
(+21 files in other folders)
