[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vrspin"
version = "0.1.0"
description = "SpinStep-powered 'Look & Interact' VR demo — orientation-driven perception for virtual plazas."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: Simulation",
]
dependencies = [
    "numpy>=1.22",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "spinstep @ git+https://github.com/VoxleOne/SpinStep.git@v0.6.0a0",
]

[project.scripts]
vrspin-demo = "demo_look_and_interact:run_demo"

[tool.setuptools.packages.find]
include = ["vrspin*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
